<resources>
    <string name="app_name">Octave Academy</string>
    <string name="Privacy_Policy">By signing in you agree to our <u>Privacy Policy and Terms.</u>.</string>
    <string name="Sign_in">Already have an account.   <u>Sign In.</u>.</string>
    <string name="Register">Don\'t have an account.   <u>Register.</u>.</string>
    <string name="forgot_your_password">Forgot you password?</string>
    <string name="create_a_strong_password">Create a Strong Password</string>
    <string name="create_password">Create Password</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home">Home</string>
    <string name="meetups">Meetups</string>
    <string name="events">Events</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="logout">LogOut</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="notification">Notification</string>
</resources>