<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_meetups"
            android:title="@string/meetups"
            android:icon="@drawable/users"/>
        <item
            android:id="@+id/nav_events"
            android:title="@string/events"
            android:icon="@drawable/calendar"/>
        <item
            android:id="@+id/nav_contact_us"
            android:title="@string/contact_us"
            android:icon="@drawable/user_minus"/>
        <item
            android:id="@+id/nav_about_us"
            android:title="@string/about_us"
            android:icon="@drawable/info"/>

        <item android:id="@+id/logout"
            android:title="@string/logout"
            android:icon="@drawable/icon"
            />
    </group>

</menu>